tests/community/submissions/13/1453769-multiply-string.output.error
Type error at <stdin> line 6 col 13: operation "*" not defined for Number 8000000000000000000000000, String "9"
