tests/community/submissions/13/1453769-multiply-string.sl
/**
 * Checks that multiplying by a string throws an exception.
 */

function main() {
    println(8000000000000000000000000 * "9");
}